<!--
  ~ Copyright 2020-2021 Mark de Reeper
  ~
  ~  Permission is hereby granted, free of charge, to any person
  ~  obtaining a copy of this software and associated documentation
  ~  files (the "Software"), to deal in the Software without
  ~  restriction, including without limitation the rights to use,
  ~  copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  copies of the Software, and to permit persons to whom the
  ~  Software is furnished to do so, subject to the following
  ~  conditions:
  ~
  ~  The above copyright notice and this permission notice shall be
  ~  included in all copies or substantial portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~  OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="about_text">Version %s By Mark de Reeper\n\nUsed in conjunction with dmdext and works as a remote DMD when used with dmdext\'s network streaming option.</string>
    <string name="about_menu_item">About DMD Viewer</string>
    <string name="app_name">DMD Viewer</string>
    <string name="connect_dmd">Start DMD</string>
    <string name="default_dmd_port">9090</string>
    <string name="dialog_ok">OK</string>
    <string name="dmd_ip">IP Address</string>
    <string name="dmd_port">Listen Port</string>
    <string name="dmd_port_hint">The port for the WebSocketServer to listen on</string>
    <string name="internet_needed">Need Internet permission to start DMD viewer</string>
    <string name="enable_dmd_effect">Enable DMD Effect</string>
    <string name="dmd_pixel_round">Round DMD Pixel</string>
    <string name="title_activity_dmd">DMD</string>
    <string name="wifi_ip_unknown">unknown</string>
    <string name="wifi_needed">Need Wifi State permission to show IP address</string>
    <string name="wifi_not_enabled">Wifi needs to be enabled to use DMD Viewer</string>
    <string name="ws_url_text">WebSocket URL</string>
    <string name="ws_url">ws://%s:%s/</string>
    <string name="title_activity_settings">DMD Settings</string>
    <string name="dmd_settings">DMD Viewer Settings</string>

    <!-- Preference Titles -->
    <string name="main_header">DMD Viewer Settings</string>

    <!-- Main Preferences -->
    <string name="auto_start_title">Listen on app start</string>
    <string name="auto_start_summary_on">Automatically start DMD viewer on load</string>
    <string name="auto_start_summary_off">Don\'t automatically start DMD viewer on load</string>
    <string name="dmd_effect_title">DMD Effect</string>
    <string name="dmd_effect_summary_on">DMD effect enabled</string>
    <string name="dmd_effect_summary_off">DMD effect disabled</string>
    <string name="round_pixel_title">Round DMD Pixel</string>
    <string name="round_pixel_summary_on">Round DMD pixel enabled</string>
    <string name="round_pixel_summary_off">Round DMD pixel disabled</string>
    <string name="port_title">WebSocket port</string>
    <string name="port_summary">The port that the WebSocket will listen on</string>
</resources>
