<!--
  ~ Copyright 2021 Mark de Reeper
  ~
  ~  Permission is hereby granted, free of charge, to any person
  ~  obtaining a copy of this software and associated documentation
  ~  files (the "Software"), to deal in the Software without
  ~  restriction, including without limitation the rights to use,
  ~  copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  copies of the Software, and to permit persons to whom the
  ~  Software is furnished to do so, subject to the following
  ~  conditions:
  ~
  ~  The above copyright notice and this permission notice shall be
  ~  included in all copies or substantial portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~  OTHER DEALINGS IN THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/main_header">

        <SwitchPreferenceCompat
            app:key="auto_start"
            app:title="@string/auto_start_title"
            app:summaryOff="@string/auto_start_summary_off"
            app:summaryOn="@string/auto_start_summary_on" />
        <SwitchPreferenceCompat
            app:key="dmd_effect"
            app:title="@string/dmd_effect_title"
            app:defaultValue="true"
            app:summaryOff="@string/dmd_effect_summary_off"
            app:summaryOn="@string/dmd_effect_summary_on" />
        <SwitchPreferenceCompat
            app:dependency="dmd_effect"
            app:key="round_pixel"
            app:summaryOff="@string/round_pixel_summary_off"
            app:summaryOn="@string/round_pixel_summary_on"
            app:title="@string/round_pixel_title" />
        <EditTextPreference
            android:singleLine="true"
            app:key="websocket_port"
            app:defaultValue="9090"
            app:summary="@string/port_summary"
            app:title="@string/port_title" />

    </PreferenceCategory>

</PreferenceScreen>